--- a/Membership_BL/Membership_BL.csproj
+++ b/Membership_BL/Membership_BL.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MailKit" Version="4.14.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MembershipCommon\MembershipCommon.csproj" />
     <ProjectReference Include="..\Membership_DataAccess\Membership_DataAccess.csproj" />
   </ItemGroup>
