--- a/MembershipAPI/appsettings.json
+++ b/MembershipAPI/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EmailSettings": {
+    "SmtpHost": "sandbox.smtp.mailtrap.io",
+    "SmtpPort": 2525,
+    "Username": "bb5ffd418562ef",
+    "Password": "edb1763875bc06",
+    "FromEmail": "churchmembership@example.com",
+    "FromName": "Admin"
+  }
 }
